A couple more fixes to the z-index for the header.

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -92,4 +92,10 @@
         gap: 1rem;
     }
 
+    body.home .hero a.join {
+        float: right;
+        margin-top: -6rem;
+        margin-right: 2rem;
+    }
+
 }
