--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -15,6 +15,8 @@ footer {
 header {
     padding: 1rem;
     background-color: #e8f2fb;
+    position: relative;
+    z-index: 1;
 }
 
 header>div {
@@ -81,13 +83,6 @@ button#menu {
 .navigation a.active {
     color: #fff;
     background-color: #002a57;
-}
-
-body.home .navigation a.home,
-body.directory .navigation a.directory,
-body.join .navigation a.join,
-body.discover .navigation a.discover {
-    color: #002a57;
 }
 
 
@@ -308,9 +303,9 @@ body.home .hero a.join {
     background-color: #0162c9;
     color: #fff;
     position: relative;
-    float: right;
-    margin-top: -6rem;
-    margin-right: 2rem;
+    float: left;
+    margin-top: -5rem;
+    margin-left: 1rem;
     text-decoration: none;
 }
 
